--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<div style="color:red">must test when `npm run dev` is running...</div><br/>
+
 <article></article>
 <hr/>
 <button id="trigger">show</button>
